--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,9 @@
 		"thread": "cpp",
 		"typeindex": "cpp",
 		"typeinfo": "cpp",
-		"variant": "cpp"
+		"variant": "cpp",
+		"ranges": "cpp",
+		"span": "cpp"
 	},
 	"prettier.tabWidth": 4
 }
