--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,7 +85,8 @@
         "numbers": "cpp",
         "semaphore": "cpp",
         "stop_token": "cpp",
-        "syncstream": "cpp"
+        "syncstream": "cpp",
+        "strstream": "cpp"
     },
 	"prettier.tabWidth": 4
 }
