--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,9 @@
           "-ggdb",
           "${file}",
           "-o",
-          "${fileDirname}/${fileBasenameNoExtension}"
+          "${fileDirname}/${fileBasenameNoExtension}",
+          "-I",
+          "${workspaceFolder}/ac-library/"
         ],
         "problemMatcher": ["$gcc"],
         "group": {
