--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,5 +90,5 @@
         "all": "cpp"
     },
     "prettier.tabWidth": 4,
-    "C_Cpp.errorSquiggles": "enabled"
+    "C_Cpp.errorSquiggles": "disabled"
 }
